# task-queue

./: .dev_env  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  wait_for_databases.sh
backend/fixtures/development/: shortened_urls.json
backend/src/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
backend/src/apps/short_url/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
backend/src/apps/short_url/migrations/: 0001_initial.py
backend/src/apps/short_url/tests/: factories.py  test_models.py  test_services.py  test_viewsets.py
backend/src/settings/: __init__.py
backend/src/settings/components/: base.py  celery.py  database.py  loggers.py
backend/src/settings/environments/: development.py  production.py  staging.py
nginx/local/: Dockerfile  nginx_local.conf
